Prevent banners from getting too wide

--- a/find-core/src/main/public/static/css/app-include.css
+++ b/find-core/src/main/public/static/css/app-include.css
@@ -614,6 +614,7 @@ input.find-input {
 
 .result-thumbnail > img {
     max-height: 600px;
+    max-width: 100%;
 }
 
 .related-concepts-list {
